Fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@ body{
     margin:0;
     padding:12px;
     background:#f3f4f8;
-    overflow: hidden;
 }
 
 h1{ text-align:center; }
